community-docs/v0.13/modules/ROOT/pages/how-tos-for-operators/multi-user.adoc
= Setup Multi User
:revdate: 2025-07-23
:page-revdate: {revdate}

{product_name} uses Kubernetes RBAC where possible.

One addition on top of RBAC is the xref:explanations/namespaces.adoc#_restricting_gitrepos[`GitRepoRestriction`] resource, which can be used to control GitRepo resources in a namespace.

A multi-user fleet setup looks like this:

* tenants don't share namespaces, each tenant has one or more namespaces on the
upstream cluster, where they can create GitRepo resources
* tenants can't deploy cluster wide resources and are limited to a set of
namespaces on downstream clusters
* clusters are in a separate namespace

image::FleetSharedClusters.svg[Shared Clusters]

[CAUTION]
.important information
====

The isolation of tenants is not complete and relies on Kubernetes RBAC to be
set up correctly. Without manual setup from an operator tenants can still
deploy cluster wide resources. Even with the available {product_name} restrictions,
users are only restricted to namespaces, but namespaces don't provide much
isolation on their own. E.g. they can still consume as many resources as they
like.

However, the existing {product_name} restrictions allow users to share clusters, and
deploy resources without conflicts.
====


[#_example_productname_standalone]
== Example {product_name} Standalone

This would create a user 'fleetuser', who can only manage GitRepo resources in the 'workspace1' namespace.

[,bash]
----
 kubectl create serviceaccount fleetuser
 kubectl create namespace workspace1
 kubectl create -n workspace1 role fleetuser --verb=get --verb=list --verb=create --verb=delete --resource=gitrepos.fleet.cattle.io
 kubectl create -n workspace1 rolebinding fleetuser --serviceaccount=default:fleetuser --role=fleetuser
----

If we want to give access to multiple namespaces, we can use a single cluster role with two role bindings:

[,bash]
----
 kubectl create clusterrole fleetuser --verb=get --verb=list --verb=create --verb=delete --resource=gitrepos.fleet.cattle.io
 kubectl create -n workspace1 rolebinding fleetuser --serviceaccount=default:fleetuser --clusterrole=fleetuser
 kubectl create -n workspace2 rolebinding fleetuser --serviceaccount=default:fleetuser --clusterrole=fleetuser
----

This makes sure, tenants can't interfere with GitRepo resources from other tenants, since they don't have access to their namespaces.

[#_isolated_workspaces_in_rancher]
== Isolated Workspaces in Rancher

Users belonging to a specific group/organization within the company, may want to disable visibility of their clusters to users from other groups/organizations of the same company.

In order to achieve this isolation, Rancher provides `GlobalRoles` to allow permissions to the users on certain Kubernetes resources. `GlobalRoles` have the ability to limit access to specific namespaces present on the cluster, thanks to `NamespacedRules`.

When a new fleet workspace is created, a corresponding namespace with an identical name is automatically generated within the Rancher local cluster.
For a user to see and deploy fleet resources in a specific workspace, they need at least the following permissions:

* list/get the `fleetworkspace` cluster-wide resource in the local cluster
* Permissions to create fleet resources (such as `bundles`, `gitrepos`, ...) in the backing namespace for the workspace in the local cluster.

Let's grant permissions to deploy fleet resources in the `workspace1` and `workspace2` fleet workspaces:

ifeval::["{product}" == "fleet"]
* To create the `workspace1` and `workspace2` fleet workspaces, you can either do it in the https://ranchermanager.docs.rancher.com/integrations-in-rancher/fleet/overview#accessing-fleet-in-the-rancher-ui[Rancher UI] or use the following YAML resources:
endif::[]

ifeval::["{product}" == "continuous-delivery"]

* To create the `workspace1` and `workspace2` fleet workspaces, you can either do it in the https://documentation.suse.com/cloudnative/rancher-manager/latest/en/integrations/fleet/overview.html#_accessing_suse_rancher_prime_continuous_delivery_in_the_rancher_ui[Rancher UI] or use the following YAML resources:

endif::[]
[,yaml]
----
apiVersion: management.cattle.io/v3
kind: FleetWorkspace
metadata:
  name: workspace1
----

[,yaml]
----
apiVersion: management.cattle.io/v3
kind: FleetWorkspace
metadata:
  name: workspace2
----

* Create a `GlobalRole` that grants permission to deploy fleet resources in the `workspace1` and `workspace2` fleet workspaces:

[,yaml]
----
apiVersion: management.cattle.io/v3
kind: GlobalRole
metadata:
  name: fleet-projects1and2
namespacedRules:
  workspace1:
    - apiGroups:
        - fleet.cattle.io
      resources:
        - gitrepos
        - bundles
        - clusterregistrationtokens
        - gitreporestrictions
        - clusters
        - clustergroups
      verbs:
        - '*'
  workspace2:
    - apiGroups:
        - fleet.cattle.io
      resources:
        - gitrepos
        - bundles
        - clusterregistrationtokens
        - gitreporestrictions
        - clusters
        - clustergroups
      verbs:
        - '*'
rules:
  - apiGroups:
      - management.cattle.io
    resourceNames:
      - workspace1
      - workspace2
    resources:
      - fleetworkspaces
    verbs:
      - '*'
----

ifeval::["{product}" == "fleet"]
Assign the `GlobalRole` to users or groups, more info can be found in the https://ranchermanager.docs.rancher.com/how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/global-permissions#configuring-global-permissions-for-individual-users[Rancher docs]
endif::[]

ifeval::["{product}" == "continuous-delivery"]

Assign the `GlobalRole` to users or groups, more info can be found in the https://documentation.suse.com/cloudnative/rancher-manager/v2.12/en/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.html#_configuring_global_permissions_for_individual_users[Rancher docs]
endif::[]

The user now has access to the `Continuous Delivery` tab in Rancher and can deploy resources to both the `workspace1` and `workspace2` workspaces.

In order to have a well organized environment, each workspace should have its own related `GlobalRole` to help with the separation of duties and isolation required by the customer. This way, each user can be assigned to one or more `GlobalRoles`, depending on the needs.

[#_allow_access_to_clusters]
== Allow Access to Clusters

This assumes all GitRepos created by 'fleetuser' have the `team: one` label. Different labels could be used, to select different cluster namespaces.

In each of the user's namespaces, as an admin create a xref:explanations/namespaces.adoc#_cross_namespace_deployments[`BundleNamespaceMapping`].

[,yaml]
....
kind: BundleNamespaceMapping
apiVersion: fleet.cattle.io/v1alpha1
metadata:
  name: mapping
  namespace: workspace1

# Bundles to match by label.
# The labels are defined in the fleet.yaml # labels field or from the
# GitRepo metadata.labels field
bundleSelector:
  matchLabels:
    team: one
    # or target one repo
    #fleet.cattle.io/repo-name: simpleapp

# Namespaces, containing clusters, to match by label
namespaceSelector:
  matchLabels:
    kubernetes.io/metadata.name: fleet-default
    # the label is on the namespace
    #workspace: prod
....

The xref:how-tos-for-users/gitrepo-targets.adoc[`target` section] in the GitRepo resource can be used to deploy only to a subset of the matched clusters.

[#_restricting_access_to_downstream_clusters]
== Restricting Access to Downstream Clusters

Admins can further restrict tenants by creating a `GitRepoRestriction` in each of their namespaces.

[,yaml]
....
kind: GitRepoRestriction
apiVersion: fleet.cattle.io/v1alpha1
metadata:
  name: restriction
  namespace: workspace1

allowedTargetNamespaces:
  - workspace1simpleapp
....

This will deny the creation of cluster wide resources, which may interfere with other tenants and limit the deployment to the 'workspace1simpleapp' namespace.

[#_an_example_gitrepo_resource]
== An Example GitRepo Resource

A GitRepo resource created by a tenant, without admin access could look like this:

[,yaml]
....
kind: GitRepo
apiVersion: fleet.cattle.io/v1alpha1
metadata:
  name: simpleapp
  namespace: workspace1
  labels:
    team: one

spec:
  repo: https://github.com/rancher/fleet-examples
  paths:
  - bundle-diffs

  targetNamespace: workspace1simpleapp

  # do not match the upstream/local cluster, won't work
  targets:
  - name: dev
    clusterSelector:
      matchLabels:
        env: dev
....

This includes the `team: one` label and and the required `targetNamespace`.

Together with the previous `BundleNamespaceMapping` it would target all clusters with a `env: dev` label in the 'fleet-default' namespace.

[NOTE]
====

`BundleNamespaceMappings` do not work with local clusters, so make sure not to target them.
====

